2004-09-04  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: fixing jade compiler error of Alex's 
      previous commit for priority flag.

2004-09-03  Stipe Tolj  <stolj@wapme.de>
    * gw/smsc/smsc_http.c: upgradding bruNET response parsing to comply with
      more recent interface verions (v2.0+) where bruNET delivers 'MessageId'
      in the HTTP response body.

2004-09-03 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c, gw/msg-decl.h, gw/smsbox.c: applied patch that allows
      setting of sms priority flag in smsbox and smpp module. Also fixes wrong 
      priority setting in smpp module.
    * doc/userguide/userguide.xml: describe 'priority' flag and some missing params.

2004-09-01  Stipe Tolj  <stolj@wapme.de>
    * doc/userguide/userguide.xml: moved EMI/UCP specific 'throughput' to 
      general section, since this is within the SMSCConn structure itself.
      Added 'smasi' features to the check lists.

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * gwlib/gw-rwlock.[ch]: fixed includes. we don't define HAVE_CONFIG_H so
      gw-config.h should be always included.

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: added ESME dlr bit to DLR processing (some smsc's sent
      us esm_class=0x08 and it's IMO ok). 

2004-08-30 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: removed centrium references and changed email addr.

2004-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/msg-decl.h, gw/msg.[ch], gw/sms.h, gw/smsbox.c,
      gw/smscconn.c, gw/wapbox.c, gw/smsc/smsc_http.c, gw/smsc/smsc_soap.c,
      utils/mtbatch.c: applied patch that implements concatenation of large
      sms inside bearerbox and does care of a sending all message parts over
      one smsc link. Now we have a problem with concatenated large sms that
      bearerbox will try to load balance those over diff. smsc links and such