@@ -1,3 +1,10 @@
+2004-09-08 Alexander Malysh <amalysh at kannel.org>
+    * gw/sms.[ch], gw/smsc/smsc_at.[ch], gw/smsc/smsc_emi.c: applied patch
+      that adds usage of priority queue and priority flag in smsc_at & smsc_emi.
+      This patch makes it possible to prioritize messages and to ensure that older
+      messages will be sent first.
+      [Msg-ID: <ch9pko$r5u$2@sea.gmane.org>].
+
 2004-09-04  Stipe Tolj  <stolj@wapme.de>
     * doc/userguide/userguide.xml: fixing jade compiler error of Alex's 
       previous commit for priority flag.
